--- a/main.ipynb
+++ b/main.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -11,7 +11,7 @@
        "'2.1.2+cpu'"
       ]
      },
-     "execution_count": 1,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -47,7 +47,7 @@
        "'cpu'"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -99,24 +99,87 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# train_data = datasets.FashionMNIST(\n",
-    "#     root= 'data', # where to download data to?\n",
-    "#     train= True,  # training data\n",
-    "#     download= True, # download data if it doesnt exist on disk\n",
-    "#     transform= ToTensor(), # images come as PIL format, we want to turn into Torch tensors\n",
-    "#     target_transform=None # transform labels\n",
-    "# )\n",
+    "train_data = datasets.FashionMNIST(\n",
+    "    root= 'data', # where to download data to?\n",
+    "    train= True,  # training data\n",
+    "    download= True, # download data if it doesnt exist on disk\n",
+    "    transform= ToTensor(), # images come as PIL format, we want to turn into Torch tensors\n",
+    "    target_transform=None # transform labels\n",
+    ")\n",
     "\n",
-    "# test_data =  datasets.FashionMNIST(\n",
-    "#     root= 'data',\n",
-    "#     train= False,\n",
-    "#     download= True,\n",
-    "#     transform= ToTensor()\n",
-    "# )"
+    "test_data =  datasets.FashionMNIST(\n",
+    "    root= 'data',\n",
+    "    train= False,\n",
+    "    download= True,\n",
+    "    transform= ToTensor()\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "torch.Size([1, 28, 28])"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "image, label= train_data[0]\n",
+    "image.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['T-shirt/top',\n",
+       " 'Trouser',\n",
+       " 'Pullover',\n",
+       " 'Dress',\n",
+       " 'Coat',\n",
+       " 'Sandal',\n",
+       " 'Shirt',\n",
+       " 'Sneaker',\n",
+       " 'Bag',\n",
+       " 'Ankle boot']"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "class_names = train_data.classes\n",
+    "class_names"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Prepare DataLoader\n",
+    "\n",
+    "from torch.utils.data import DataLoader\n",
+    "\n"
    ]
   },
   {
